# Financial-News-Generator

./: .gitignore  Giga_generate_add_news.ipynb  Gigachat_defs.py  README.md  Synthetic_financial_news.ipynb  pyproject.toml  тип новостей и веса (для справки).docx
configs/: config.yml
configs/prompts/: prompt.txt  system_prompt.txt  system_prompt_news.txt
data/: generated_news.xlsx  synthetic_news.xlsx
data/raw/: few_shot_2_each.xlsx
notebooks/: Giga_generate_add_news.ipynb  Synthetic_financial_news.ipynb
prompt_templates/: prompt.txt  system_prompt.txt  system_prompt_news.txt  types_of_news.txt
scripts/: generate_news.py
src/gigachat_synthetic_news/: __init__.py  config.py  generation.py  llm.py  utils.py
